<resources>
    <string name="app_name">Ascend Exam</string>
    <string name="products">Products</string>
    <string name="detail">Detail</string>
    <string name="new_tag">NEW</string>
    <string name="start_picking">Start picking your treats</string>
    <string name="no_data_list">No product list !</string>
    <string name="no_data">No data</string>
    <string name="something_error">Sorry, something error.</string>
    <string name="cannot_connect_to_server">Sorry, cannot connect to the server.</string>
</resources>